# crewai_customer_support_rag

./: demo.ipynb  pyproject.toml  requirements.txt
src/blobs/: answer.md
src/customer_support_rag/: crew.py  main.py
src/customer_support_rag/config/: agents.yaml  tasks.yaml
src/customer_support_rag/tools/: pdf_loader.py  rag_router.py  vector_store.py
src/customer_support_rag/vector_db/faiss_index/: index.faiss  index.pkl
