[project]
name = "rag-crew"
version = "0.1.0"
description = "CREW AI Customer Support RAG Project Using CREW AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai>=1.8.1",
    "crewai-tools>=1.8.1",
    "email-validator>=2.3.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "fastapi-sso>=0.17.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "litellm>=1.75.3",
    "ollama>=0.6.1",
    "openai>=1.83.0",
    "pypdf>=6.6.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.2.0",
]
